Added General Layout

--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
         <meta name="viewport" content="width=device-width, initial-scale = 1.0">
         <title> All The Clocks! </title>
         <script src="script.js" type="module"></script>
-        
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-    
+        <svg class="outer" width="450" height="150">
+            <rect x="25" y="25" rx="30" ry="30" width="400" height="100"/>
+            <rect class="inner" x="45" y="35" rx="8" ry="8" width="43.75" height="80" />
+            <rect class="inner" x="100" y="35" rx="8" ry="8" width="43.75" height="80" />
+            <text class="colons" x="145" y="95" font-size="100">:</text>
+            <rect class="inner" x="175" y="35" rx="8" ry="8" width="43.75" height="80" />
+            <rect class="inner" x="230" y="35" rx="8" ry="8" width="43.75" height="80" />
+            <text class="colons" x="275" y="95" font-size="100">:</text>
+            <rect class="inner" x="305" y="35" rx="8" ry="8" width="43.75" height="80" />
+            <rect class="inner" x="360" y="35" rx="8" ry="8" width="43.75" height="80" />
+        </svg>
     </body>
 
 </html>
