--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <rect class="inner" x="360" y="35" rx="8" ry="8" width="43.75" height="80" />
             <text class="digits" id="sec2" x="360" y="105" font-size="85">0</text>
         </svg>
+        <button id="buttontest">Test</button>
     </body>
 
 </html>
