--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- Hours -->
             <rect x="25" y="25" rx="25" ry="25" width="400" height="100"/>
             <rect class="inner" x="45" y="35" rx="8" ry="8" width="43.75" height="80" />
-            <text class="digits" id="hour1" x="45" y="105" font-size="85">0</text>
+            <text class="digits hour1" id="hour1" x="45" y="105" font-size="85">0</text>
             <rect class="inner" x="100" y="35" rx="8" ry="8" width="43.75" height="80" />
             <text class="digits" id="hour2" x="100" y="105" font-size="85">0</text>
 
