--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
             <!-- Hours -->
             <rect x="25" y="25" rx="25" ry="25" width="400" height="100"/>
             <rect class="inner" x="45" y="35" rx="8" ry="8" width="43.75" height="80" />
-            <text class="digits hour1" id="hour1" x="45" y="105" font-size="85">0</text>
+            <text class="digits hour1" x="45" y="105" font-size="85">0</text>
             <rect class="inner" x="100" y="35" rx="8" ry="8" width="43.75" height="80" />
-            <text class="digits" id="hour2" x="100" y="105" font-size="85">0</text>
+            <text class="digits hour2" x="100" y="105" font-size="85">0</text>
 
             <text class="colons" x="145" y="100" font-size="100">:</text>
             <!-- Minutes -->
             <rect class="inner" x="175" y="35" rx="8" ry="8" width="43.75" height="80" />
-            <text class="digits" id="min1" x="175" y="105" font-size="85">0</text>
+            <text class="digits min1" x="175" y="105" font-size="85">0</text>
             <rect class="inner" x="230" y="35" rx="8" ry="8" width="43.75" height="80" />
-            <text class="digits"id ="min2" x="230" y="105" font-size="85">0</text>
+            <text class="digits min2" x="230" y="105" font-size="85">0</text>
 
             <text class="colons" x="275" y="100" font-size="100">:</text>
             <!-- Seconds -->
             <rect class="inner" x="305" y="35" rx="8" ry="8" width="43.75" height="80" />
-            <text class="digits" id="sec1" x="305" y="105" font-size="85">0</text>
+            <text class="digits sec1" x="305" y="105" font-size="85">0</text>
             <rect class="inner" x="360" y="35" rx="8" ry="8" width="43.75" height="80" />
-            <text class="digits" id="sec2" x="360" y="105" font-size="85">0</text>
+            <text class="digits sec2" x="360" y="105" font-size="85">0</text>
         </svg>
         <button id="buttontest">Test</button>
     </body>
