--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <text class="digits sec2" x="360" y="105" font-size="85">0</text>
         </svg>
         <button id="buttontest">Test</button>
+        <script type="module"> 
+            import { Clock } from "./modules/clocks.js"
+            new Clock;
+        </script> 
     </body>
 
 </html>
