--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <rect class="inner" x="360" y="35" rx="8" ry="8" width="43.75" height="80" />
             <text class="digits sec2" x="360" y="105" font-size="85">0</text>
         </svg>
-        <button id="buttontest">Test</button>
+        <!-- <button id="buttontest">Test</button> -->
         <script type="module"> 
             import { Clock } from "./modules/clocks.js"
             new Clock;
