--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
     <body>
         <svg class="outer" width="450" height="150">
-            <!-- Hours -->
+            <!-- Outer -->
             <rect x="25" y="25" rx="25" ry="25" width="400" height="100"/>
+            <!-- Hours -->
             <rect class="inner" x="45" y="35" rx="8" ry="8" width="43.75" height="80" />
             <text class="digits hour1" x="45" y="105" font-size="85">0</text>
             <rect class="inner" x="100" y="35" rx="8" ry="8" width="43.75" height="80" />
@@ -34,8 +35,10 @@
         </svg>
         <!-- <button id="buttontest">Test</button> -->
         <script type="module"> 
-            import { Clock } from "./modules/clocks.js"
-            new Clock;
+            import { Clock, ClockWithDate } from "./modules/clocks.js"
+            let c = new Clock;
+            c.initClock();
+            new ClockWithDate;
         </script> 
     </body>
 
