--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
             
         <!-- <button id="buttontest">Test</button> -->
         <script type="module"> 
-            import { Clock, ClockWithDate } from "./modules/clocks.js"
+            import { Clock, ClockWithDate, StopWatch } from "./modules/clocks.js"
             let c = new Clock;
             c.init();
             new ClockWithDate;
+            new StopWatch;
         </script> 
     </body>
 
