--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             new ClockWithDate;
             new StopWatch;
         </script> 
+        <div class="clock-container">
+
+        </div>
     </body>
 
 </html>
